<resources>
    <string name="app_name">Server</string>
    <string name="username_text">Username: </string>
    <string name="password_text">Password: </string>
    <string name="username_field">Enter your username</string>
    <string name="password_field">Enter your Password</string>
    <string name="port_field">Enter a port to connect to</string>
    <string name="host_field">Enter an ip to to connect to</string>
    <string name="host_text">Server Host: </string>
    <string name="port_text">Server Port: </string>
    <string name="firstname_text">First Name: </string>
    <string name="lastname_text">Last Name: </string>
    <string name="email_text">Email: </string>
    <string name="empty_log_in">You must enter a username and password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="Name">Click on a marker</string>
    <string name="info">to see event details</string>
    <string name="life_events">Life Events</string>
    <string name="relatives">Relatives</string>
    <string name="life_stories_top">Life Story Lines</string>
    <string name="life_stories_bottom">SHOW LIFE STORY LINES</string>
    <string name="family_top">Family Tree Lines</string>
    <string name="family_bottom">SHOW FAMILY TREE LINES</string>
    <string-array name="color_array">
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Orange</item>
    </string-array>
    <string-array name="map_array">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>


</resources>
