<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/firstname_text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/firstname_text"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/lastname_text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/lastname_text"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/gender"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/gender"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorFooter"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_drop_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="left"
            android:src="@drawable/ic_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/life_events"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorFooter"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_drop_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="left"
            android:src="@drawable/ic_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/relatives"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/family"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>