<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="120dp"
                android:text="@string/life_stories_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/life_stories_bottom"
                android:textSize="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Spinner
            android:id="@+id/life_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_gravity="right"
            android:id="@+id/mySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" OFF " />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="106dp"
                android:text="@string/family_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/family_bottom"
                android:textSize="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Spinner
            android:id="@+id/Family_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_gravity="right"
            android:id="@+id/mySwitchFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" OFF " />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="132dp"
                android:text="Spouse Lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="SHOW SPOUSE LINES"
                android:textSize="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Spinner
            android:id="@+id/spouse_line_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_gravity="right"
            android:id="@+id/switchSpouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" OFF " />
    </LinearLayout>

</LinearLayout>